--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@
           </div>
         
           <div class=" row justify-content-center">
-            <div class=" col-xl-3">
+            <div class=" col-xl-3 text-center card">
               <img src="./assets/Card 1.png">
             </div>
-            <div class=" col-xl-3">
+            <div class=" col-xl-3 text-center card">
               <img src="./assets/Card 2.png">
             </div>
-            <div class="col-xl-3">
+            <div class="col-xl-3 text-center card">
               <img src="./assets/Card 3.png">
             </div>
             
