--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
               </div>    
             </nav>
           </div>
-          <div class="menu"><i class="fa fa-bars" style="color:#FFFFFF;font-size: 40px;"></i></div>
+          <a class="menu" href="javascript:void(0);" onclick="myFunction()"><i class="fa fa-bars" style="color:#FFFFFF;font-size: 40px;"></i></div>
+          </a>
         </div>
         <div class="row ">
           <div class="col-xl-6 ">
