--- a/index.html
+++ b/index.html
@@ -322,6 +322,16 @@
   
     </div>
     </div>
+     <script>
+      function myFunction() {
+  var x = document.getElementById("navbarNav");
+  if (x.style.display === "block") {
+    x.style.display = "none";
+  } else {
+    x.style.display = "block";
+  }
+}
+    </script>
    
      
     </body>
